--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "multer": "^1.4.4",
-    "venom-bot": "^4.2.0"
+    "http": "^0.0.1-security",
+    "multer": "^1.4.4-lts.1",
+    "qrcode": "^1.5.0",
+    "socket.io": "^4.5.1",
+    "whatsapp-web.js": "^1.17.0"
   }
 }
