--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "@toharyan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "multer": "^1.4.4-lts.1",
     "qrcode": "^1.5.0",
+    "qs": "^6.14.0",
     "socket.io": "^4.5.1",
-    "whatsapp-web.js": "^1.17.0"
+    "whatsapp-web.js": "^1.28.0"
   }
 }
