--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "multer": "^1.4.4-lts.1",
